# mcrt_denoise

./: .gitignore  CMakeLists.txt  README.md  SConscript  flowpipeline.yaml  package.py
.github/workflows/: trigger_CI.yml  trigger_RaTS.yml
cmake/: McrtDenoiseCompileDefinitions.cmake  McrtDenoiseCompileFeatures.cmake  McrtDenoiseCompileOptions.cmake  McrtDenoiseConfig.cmake.in  McrtDenoiseLinkOptions.cmake
lib/: CMakeLists.txt
lib/denoiser/: CMakeLists.txt  Denoiser.cc  Denoiser.h  DenoiserImpl.h  OIDNDenoiserImpl.cc  OIDNDenoiserImpl.h  OptixDenoiserImpl.cc  OptixDenoiserImpl.h  SConscript
